[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redisbrowse"
version = "0.1.0"
description = "A simple Textual TUI to view Redis message queues"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual>=8.2.7",
    "redis>=8.0.1",
]

[project.scripts]
redisbrowse = "redisbrowse.app:main"